tests/ui/decode-borrow-endpoint-alias.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/ui/decode-borrow-endpoint-alias.rs:33:20
   |
33 | ...ut Endpoint<'r, 0, SessionKit<'cfg, T, U, C, MAX_RV>>,
   |       ^^^^^^^^      ----------------------------------- help: remove the unnecessary generic argument
   |       |
   |       expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `ROLE`
  --> src/endpoint.rs
   |
   | pub struct Endpoint<'r, const ROLE: u8> {
   |            ^^^^^^^^     --------------

error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/decode-borrow-endpoint-alias.rs:42:23
   |
40 | ...ranch = futures::executor::block_on(endpoint.of...
   |                                        -------- first mutable borrow occurs here
41 | ...ayload = futures::executor::block_on(branch.dec...
42 | ...next_offer = endpoint.offer();
   |                 ^^^^^^^^ second mutable borrow occurs here
43 | ... = payload;
   |       ------- first borrow later used here
